Camino only - Bug 313740: Force drags from external apps to copy, not move. r=Wevah sr=pink